[tool.poetry]
name = "serverbot"
version = "0.1.0"
description = ""
authors = ["Kotaz"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.3.0"
disnake-jishaku = "^2.6.5"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
